<resources>
    <string name="app_name">Puppies Vet App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empezar">Empezar</string>
    <string name="solicitar_servicios">Solicitar servicios</string>
    <string name="perfil">Perfil</string>
    <string name="mascotas">Mascotas</string>
    <string name="usuario">USUARIO</string>
    <string name="indica_tu_correo_electr_nico">Indica tu correo electrónico</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="indica_tu_contrase_a">Indica tu contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu Contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_una_cuenta_reg_strate_aqu">¿No tienes una cuenta? Regístrate aquí.</string>
    <string name="recuperar">Recuperar</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="residencia_de_clientes">Residencia de Clientes</string>
    <string name="estado_de_servicios">Estado de Servicios</string>
    <string name="servicios_realizados">Servicios Realizados</string>
    <string name="estado_de_compras">Estado de Compras</string>
    <string name="ub_canos">Ubícanos</string>
    <string name="reportes">Reportes</string>
    <string name="generar">Generar</string>
    <string name="fecha_inicio">Fecha Inicio:</string>
    <string name="fecha_final">Fecha Final:</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="selecciona_una_fecha_inicio">Selecciona una fecha</string>
    <string name="selecciona_una_fecha_final">Fecha Final</string>
    <string name="solicitudes_de_servicios">solicitudes_de_servicios</string>
    <string name="estado_de_clientes">estado de clientes</string>
    <string name="solicitudes_de_servicios_">solicitudes de servicios</string>
    <string name="ventas_realizadas">Ventas Realizadas</string>
</resources>