<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuReportesActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fc_Header"
        android:name="com.upc.puppiesvetapp.fragments.HeaderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_header" />


    <Button
        android:id="@+id/btn_ReporteResidenciaClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/residencia_de_clientes"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_Header" />

    <Button
        android:id="@+id/btn_ReporteEstadoServicios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/estado_de_servicios"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ReporteResidenciaClientes" />

    <Button
        android:id="@+id/btn_ReporteServiciosRealizados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/servicios_realizados"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ReporteEstadoServicios" />

    <Button
        android:id="@+id/btn_ReporteEstadoCompras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/fondo_boton"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/estado_de_compras"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ReporteServiciosRealizados" />

</androidx.constraintlayout.widget.ConstraintLayout>