<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteResidenciaClientesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fc_Header"
            android:name="com.upc.puppiesvetapp.fragments.HeaderFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/fragmentContainer_Header">

                <TextView
                    android:id="@+id/tv_FechaInicio_ReporteResidenciaClientes"
                    android:labelFor="@id/et_FechaInicio_ReporteResidenciaClientes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/fecha_inicio"
                    android:textColor="@color/color_principal"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></TextView>

                <EditText
                    android:id="@+id/et_FechaInicio_ReporteResidenciaClientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/selecciona_una_fecha_inicio"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_FechaInicio_ReporteResidenciaClientes" />

                <TextView
                    android:id="@+id/tv_FechaFin_ReporteResidenciaClientes"
                    android:labelFor="@id/et_FechaFin_ReporteResidenciaClientes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/fecha_final"
                    android:textColor="@color/color_principal"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_FechaInicio_ReporteResidenciaClientes" />

                <EditText
                    android:id="@+id/et_FechaFin_ReporteResidenciaClientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="Selecciona una fecha"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_FechaFin_ReporteResidenciaClientes" />

                <Button
                    android:id="@+id/btn_GenerarReporteResidencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/fondo_boton"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/generar"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_PasswordPerfil" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>